--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,37 @@
  footer { margin-top: 100px; }
  table, td, th { vertical-align: middle; border: none; }
  th { border-bottom: 1px solid #DDD; }
+
+ .navbar-custom {
+  background-color: #004080;
+ }
+
+.navbar-nav a:hover {
+  text-decoration: none;
+}
+
+ h2 {
+   color: #004080;
+   text-transform: uppercase;
+ }
+
+.navbar-custom a {
+  font-size: 18px;
+  color: #FFFFFF;
+}
+
+.navbar-custom a:hover {
+  color: #cce6ff;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+body {
+  background-color: #cce6ff;
+}
+
+footer {
+  background-color: #004080;
+  color: #FFFFFF;
+  padding: 30px 0;
+}
